# DiscordCTFHelper

./: .dockerignore  .env.sample  .gitignore  .golangci.yml  Dockerfile  Makefile  RAD.md  README.md  SDD.md  bot.py  ctfs.db  docker-compose.yml  go.mod  go.sum  go.work  pyproject.toml  requirements.txt  ruff.toml  schema.sql
api/: ctftime.py
cmd/ctfhelper/: go.mod  go.sum  main.go
cogs/: ctf.py  ctftime.py  general.py  template.py
database/: __init__.py  schema.sql
docs/: RAD.md  RAD_en.md  RAD_it.md
lib/: ctf_model.py  ctfd.py  database.py  discord.py  logger.py  models.py  utils.py
pkg/: config.go
pkg/bot/: bot.go  go.mod  go.sum
pkg/commands/: chall.go  commands.go  create.go  creds.go  delete-creds.go  delete-flag.go  flag.go  go.mod  guide.go  help.go  init.go  netx-ctfs.go  ping.go  remove.go  report.go  rules.go  version.go  vote.go
pkg/config/: config.go  go.mod  go.sum
pkg/ctftime/: ctftime.go  go.mod  go.sum  types.go
pkg/database/: creds.go  ctf.go  go.mod  go.sum  models.go  report.go  schema.sql  server.go  sqlite.go
pkg/discord/: colors.go  discord.go  go.mod
pkg/handlers/: credsHandler.go  go.mod  go.sum  handlers.go  joinUserHandler.go  pollHandler.go  reactionOnFeedMessage.go  removeHandler.go  scheduledEventCTFHandler.go
pkg/models/: creds.go  ctf.go  go.mod  go.sum  report.go  server.go
