[project]
name = "discordctfhelper"
version = "1.0.0"
description = "Discord bot for help the handling of ctf in discord servers"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.15",
    "aiosqlite>=0.21.0",
    "beautifulsoup4>=4.13.5",
    "discord-py>=2.6.3",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
]

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = [
    "**/node_modules",
    "**/__pycache__",
    "**/*venv/**/*",
]

[tool]
